--- a/main.tex
+++ b/main.tex
@@ -76,9 +76,9 @@ A $10^{61}$ Trans-Plankian Quantized time, the Kotov's period, the Tifft's speed
 
 \markboth{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}{\thepage}
 
-Contents
+\bold{Contents}
 
-1. Principles of Hierarchy and Computation
+1. The Principles of Hierarchy and Computation
 
 2. The Cosmic Fine-Tuning and the Topological Axis
 
@@ -88,11 +88,11 @@ Contents
 
 ~~~   4.1. The Single Electron Cosmology
    
-~~~    4.2. The Coherent Cosmic Oscillation
+~~~    4.2. The Coherent Cosmic Oscillation (CCO)
    
-~~~    4.3. The Kotov observations
+~~~    4.3. The omnipresence of CCO in astropphysics
    
-~~~    4.4 the Tifft, Arp and Pionner effects
+~~~    4.4 The Tifft, Arp and Pionner effects
    
 5. The Logic of Dimensional Analysis
 
@@ -102,27 +102,27 @@ Contents
 
 ~~~    7.1. The Conservation of Information
    
-~~~    7.2. The Cosmic Special Holographic Relation
+~~~    7.2. The Cosmic Temperature
 
-~~     7.3. The Holic Principle in Cosmic Coherent Oscillation 
+~~     7.3. The Holic Principle and CCO 
     
 8. The role of Intermediary Mathematical Constants
 
 ~~~    8.1. The Eddington's constant 137
    
-~~~    8.2. the Atiyah and Sternheimer constants
+~~~    8.2. The Atiyah and Sternheimer constants
    
 ~~~    8.3. The ubiquity of $a^a$
    
-~~~    8.4. The Sporadic Groups
+~~~    8.4. The intervention of Sporadic Groups
    
- 9. Fine-Tuning with basic mathematical constants
+ 9. The Fine-Tuning with basic mathematical constants
  
-~~~    9.1. The Otimal Base $e$ is confirmed
+~~~    9.1. The optimal calculatio base $e$ confirmed
    
 ~~~    9.2. The Lenz-Wyler's Formula
    
-~~~    9.3. the Archimedes constant $\pi$ is a calculation base
+~~~    9.3. The Archimedes constant $\pi$ as a calculation base
    
 ~~~    9.4. The Four Force Unification in ppb Fine-Tuning
    
@@ -404,7 +404,7 @@ associated with the photon mass. With the above value, it is $m_{ph} = \lambdaba
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $kg.
 The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant, see Section 4.8, while the ratio $M/m_{ph} \approx (3/e)O^2_M$, to 0.1\%, with the cardinal order $O_M$ of the Monster group.
 
-\subsection{The Cosmic Coherent Oscillation}
+\subsection{The Cosmic Coherent Oscillation (CCO)}
 
 The Kotov non-Doppler cosmic oscillation \cite{Sanchez1} is not considered seriously, since it seems to
 violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting
@@ -439,7 +439,7 @@ G \approx 6.6754552 \times 10^{-11} kg^{-1} m^{3} s^{-2} \\
 \end{array}$$
 This value will be confirmed, in the ppb range, in Section 4.
 
-\subsection{The Kotov cycle omnipresence in astrophysics}
+\subsection{The omnipresence of CC0 in astrophysics}
 
 With $t = R/c$, the relation $(t t_{K}^2)^{1/3} \approx 10.8$ years, compatible with the famous 11 years sun period
 was noted. It was proposed that this unexplained phenomena, responsible for moderate periodic
@@ -726,7 +726,7 @@ the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, 
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
 
-\subsection{The Cosmic Oscillation and the Holic Principle}
+\subsection{The Holic Principle and Cosmic Coherent Oscillation}
 
 While the HB entropy of the sphere of radius $R^{\prime} = 2r_e^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius, which is the holographic reduction of the Grandcosmos (section 3), verifies the relation:
 \begin{equation}
@@ -766,7 +766,7 @@ Thus, (0.3 and -0.4 ppm)
 \end{equation}
 this precises a known relation in Particle Theory.
 
-\section{Intermediate Mathematical Constants}
+\section{The role of Intermediary Mathematical Constants}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \subsection{The Eddington's constant 137}
 
@@ -807,7 +807,7 @@ Note that while $R/\lambdabar_e \approx 2^{128}$, to 0.6 \%, $R^{\prime}/\lambda
 $$ a/(a-1) \approx 3^{1/150} $$
 Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 ppm) to the Bond factor 137/136, central in Eddington's theory \cite{Eddy}.
 
-\subsection{Atiyah and Sternheimer constants}
+\subsection{The Atiyah and Sternheimer constants}
     Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $$\Gamma = \gamma a /\pi$$ as a simplification term \cite{Atiyah1}. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 4.1) single-electron cosmical formula (0.3 ppm):    
 \begin{equation}
 a = (p/H)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
@@ -887,7 +887,7 @@ Remark that the $12^{th}$ Pell-Fermat number is $ u_1^{12}/2 \approx 140^2 + 1 \
 \approx O_B^{1/12} $ and $ D_{a} = 13^2 \sqrt{5} + 70 \approx O_M^{3/61}$,
 so connecting $O_M$ and $O_B$, since $61/2 \approx F/a^{2}$ to 0.04 \%, and introducing the next section.
 
-\subsection{The Sporadic Groups}
+\subsection{The intervention of Sporadic Groups}
 
 The above term $O_M^3$ appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm):
 \begin{equation}
@@ -934,7 +934,7 @@ a/\Gamma = \pi/\gamma \approx 2d_e \times e (p_0/p)^2
 \end{equation}
 Thus, \textit{the Atiyah symmetry infers a relation between the three mathematical constants $e$, $\pi$ and $\gamma$ and the Electron magnetic moment $2d_e$}. It is remarkable that this is obtained from singularities involving the two Monster groups. This introduces the next section.
 
-\section{Fine-tuning with basic mathematical constants}
+\section{The Fine-tuning with basic mathematical constants}
 %\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
@@ -1002,7 +1002,7 @@ a formula largely diffused on the web, but without indication of its origin. Now
 $$w^{e^w+1} \approx \sqrt{ad\sqrt{n/p}}R_{GC}/\lambdabar_e $$
 This confirms that the Planck thermal law will play a central importance in the future fundamental theory. 
 
-\subsection {Archimedes constant $\pi$ is a calculation basis}
+\subsection {The Archimedes constant $\pi$ as a calculation base}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\textit{Back to Cosmos}}
 
 The value of the Topological Function for the main String
@@ -1024,7 +1024,7 @@ a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{-1/3}
 \end{equation}
 and recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
-\subsection {The Four Forces Unification ppb Fine-Tuning}
+\subsection {The Four Forces Unification in ppb Fine-Tuning}
 The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with propositions for extension towards strong nuclear force in Grand Unification Theory (GUT), but no synthesis have been possible with gravitational force. The Topologocal Axis shows clearlty that GUT with $1O^{16}$ GeV gauge boson seems confirmed. However, in section 4.2, it is proven that the Kotov oscillation reveals a symmetry between two apparently inconciliable domains: electroweak and gravitational forces. So we look here for a precise relation involving the 4 force parameters, $a$ (electric), $a_w$ (weak nuclear), $f$ (strong nuclear) and $a_G$ (gravitation). The later force is equivalently represented by $p_G = P/2^{127/2}$, with $P = m_P/m_e$, which was admitted to be:
 \begin{equation}
 p_G = \sqrt{pH} (p/H)^3/d_e
@@ -1196,7 +1196,7 @@ The pertinence of our simple polynomial relations cannot be admitted by the stan
 
 Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of rationalisation of $e$ and $\pi$. This have been shown in this article.
 
-\section {Conclusions : cosmic simplicity at work}
+\section {Conclusions: Cosmic Simplicity at work}
 \markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ \textit{Back to Cosmos}}
 
 The application of the old direct scientific method, looking for fine tuning between physical
