--- a/main.tex
+++ b/main.tex
@@ -76,7 +76,7 @@ A $10^{61}$ Trans-Plankian Quantized time, the Kotov's period, the Tifft's speed
 
 \markboth{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}{\thepage}
 
-\bold{Contents}
+Contents
 
 1. The Principles of Hierarchy and Computation
 
