--- a/main.tex
+++ b/main.tex
@@ -685,8 +685,8 @@ $$2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \app
 where appear the masses of the heavy leptons (Section 9.5). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm:$\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 9.1).
 
 \section{The special holographic relations}
-The holographic technique is by far the most efficient way to treat huge information, based on the
-properties of a coherent wave. Now, the main lesson of modern physics is that everything (light and matter) propagates by waves  (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary matrix of quantum mechanism: it has been shown that the quantum formalism is very similar to the holographic one, describing an intreaction by a two-step holographic process. From these consideratiosn a mass for the photon (confirmed in section 4.1) and graviton has been proposed \cite{Sanchez1}, and are in definite places in the Topological Axis (fig. 1)
+The holographic technique is by far the most efficient way to treat huge information \cite{Grosmann}, based on the
+properties of a coherent wave. Now, the main lesson of modern physics is that everything (light \textit{and matter}) propagates by waves  (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary matrix of quantum mechanism: it has been shown that the quantum formalism is very similar to the holographic one, describing an intreaction by a two-step holographic process. From these consideratiosn a mass for the photon (confirmed in section 4.1) and graviton has been proposed \cite{Sanchez1}, and are in definite places in the Topological Axis (fig. 1)
 
 A Holographic Principle has been coined by some theoricians \cite{Bousso}, the name coming from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D (an idea of temporal holography proposed in the author's thesis in 1975): this is the subject of Section 3, but using only the Planck length and the topon. It is natural to suppose that they are other holographic wavelengths. In fact \textit{the Topological Axis is the reunion of height 1D-2D holographic relations}. We present here three more significant examples. 
 
@@ -1091,7 +1091,7 @@ O_M \approx d_e J_3^7 \sqrt(p/p_0)
 
 
 \subsection {The Heavy Leptons Fine-Tuning}
-The standard model is unable to explain why there are three famillies of particles. Thus, the study of the muon and tau mass ratios is crucial. Now, the following Koide relation \cite{Koide}, which has a mathematical justification in term of circulating matrix, correctly predicted $\tau$ at an epoch (around 2000) during which its measurement was false to 3 $\sigma$. It can be wrote:
+The standard model is unable to explain why there are three famillies of particles. Thus, the study of the muon and tau mass ratios is crucial. Now, the following Koide relation \cite{Koide}, which has a mathematical justification in term of circulant matrix \cite{Brannen}, correctly predicted $\tau$ at an epoch (around 2000) during which its measurement was false to 3 $\sigma$. It can be wrote:
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
@@ -1325,7 +1325,7 @@ Submitted on April 1st, 2019 / Accepted on April 6th, 2019
 \bibitem{Carr} Carr B.J. and Rees M.J., ``The anthropic principle and the
 structure of the physical world'', Nature 278, 605--612 (1979).
 
-\bibitem{Eddy} Eddington A.S. The Fundamental Theory (Cambridge, 1946).
+\bibitem{Eddington} Eddington A.S. The Fundamental Theory (Cambridge, 1946).
 
 \bibitem{Sanchez1} Sanchez F.M.``A Coherent Resonant Cosmology Approach and Its Implications in Microphysics and Biophysics''. Springer International Publishing AG. Quantum Systems in Physics, Chemistry, and Biology, Progress in Theoretical Chemistry and Physics 30 (2017), p. 375--407; DOI 10.1007/978-3-319-50255-7-23.  Sanchez F.M. ``Coherent Cosmology''. Vixra.org:1601.0011 (2017). 
 Sanchez F.M., Kotov V. and Bizouard C. ''Towards Coherent Cosmology'', Galilean Electrodynamics, special issue, 63--80 (2013).
@@ -1438,13 +1438,11 @@ d'espace d'une wustite de tri-incommensurabilite cubique est sur les groupes de
 Bravais de sa famlille cristalline dans l'espace euclidien a six dimensions''.
 Compt. Rend. Acad. Sci. Paris 305, Ser. II, 349--352 (1987).
 
-\bibitem{Atiyah2} Atiyah M. Private communication (December 2018).
+\bibitem{Atiyah2} Atiyah M. Private communication (December 2018). 
 
-%\bibitem{Brannen} C.A. Brannen, The Lepton Masses, http://brannenworks.com/MASSES2.pdf, (2006).
+\bibitem{Brannen} C.A. Brannen, The Lepton Masses, http://brannenworks.com/MASSES2.pdf, (2006).
 
-%\bibitem{Grosmann} Grosmann, Michel and Meyrueis, Patrick. ``Optics and Photonics Applied to Communication and Processing''. 01.1979
-
-%\bibitem{34} Grosmann, M and Rebordão, José and Meyrueis, Patrick. Propagation Of Waves In Optical Systems: Reformulation Of Huyghens Principle For Aspheric Systems. Proceedings of SPIE - The International Society for Optical Engineering. DOI 10.1117/12.968010. 02.1985
+bibitem{Grosmann} Grosmann, Michel and Meyrueis, Patrick. ``Optics and Photonics Applied to Communication and Processing''. 01.1979
 
 \end{thebibliography}
 \vspace*{-6pt}
