--- a/main.tex
+++ b/main.tex
@@ -382,11 +382,11 @@ $$
 very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127/2}$, $\beta = (H - p)^{-1}$ is the
 Rydbergh correction factor and $p_{0} = 6\pi^{5}$ is the Lenz-Wyler value $p$ (Section 4):
 $$
-R_{1} = ( p_{0} /p_{G} )(\beta R R^{\prime})^{1/2}
+R_{1} = ( p_{G} /p_{0} )(\beta R R^{\prime})^{1/2}
 $$
-Moreover, there is a direct connexion with the Grandcosmos radius, to 0.90 \%:
+Moreover, there is a direct connexion with the Grandcosmos radius and the Topon, to 0.90 \%:
 \begin{equation}
-\lambdabar_M  \approx R_1^3/R_{GC}^2
+R_1^3/R_{GC}^2 \approx \lambdabar_M  
 \end{equation}
 this will be of paramount importance in section 7.3
 
