--- a/main.tex
+++ b/main.tex
@@ -1445,7 +1445,9 @@ Compt. Rend. Acad. Sci. Paris 305, Ser. II, 349--352 (1987).
 
 \bibitem{Brannen} C.A. Brannen, The Lepton Masses, http://brannenworks.com/MASSES2.pdf, (2006).
 
-bibitem{Grosmann} Grosmann, Michel and Meyrueis, Patrick. ``Optics and Photonics Applied to Communication and Processing''. 01.1979
+\bibitem{Grosmann} Grosmann, Michel and Meyrueis, Patrick. ``Optics and Photonics Applied to Communication and Processing''. 01.1979
+
+\bibitem{Sanchez4}Sanchez F M (1995), Holic Principle, ANPA Proc. (Cambridge) 16, 324
 
 \end{thebibliography}
 \vspace*{-6pt}
