--- a/main.tex
+++ b/main.tex
@@ -155,11 +155,9 @@ The present article shows that \textit{Physics is an unique part of Mathematics,
 
 The fact that three parameters, among of about 30, are so clearly emerging means that physics, and more generally science, follows a hierarchical order: \textit{one can progress without knowing the details of the underlying fundamental theory.}
 
-So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. In the same manner, this article prefigures \textit{the fundamental theory which must be based on arithmetics,} being in fact a characteristic of deterministic computation, which could proceed by optimal algorithms, probably in liaison with the above Principle of Hierarchy, which seems at first sight contradictory with the Principe of Computation. 
+So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. 
 
-
-
-
+In the same manner, this article prefigures \textit{the fundamental theory,but revealing its arithmetical foundation: the Holic Principle}, recalled in section 6. There must exist multi-base algorithms able to explain the compatibiloity between thses two principles which seems at first sight contradictory. 
 
 
 \begin{figure*}
