--- a/main.tex
+++ b/main.tex
@@ -157,7 +157,7 @@ The fact that three parameters, among of about 30, are so clearly emerging means
 
 So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. 
 
-In the same manner, this article prefigures \textit{the fundamental theory,but revealing its arithmetical foundation: the Holic Principle}, recalled in section 6. There must exist multi-base algorithms able to explain the compatibiloity between thses two principles which seems at first sight contradictory. 
+In the same manner, this article prefigures \textit{the fundamental theory, but precizing its arithmetical foundation: the Holic Principle}, recalled in section 6. Thus, there must exist multi-base algorithms able to explain the compatibiloity between these two principles, which seems at first sight contradictory. 
 
 
 \begin{figure*}
