--- a/main.tex
+++ b/main.tex
@@ -1413,6 +1413,8 @@ Math. Soc. 11(3) 308--339 (1979)
 \bibitem{Koide} Koide Y. ``Fermion-Boson two-body model of quarks and leptons and
 Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
 
+\bibitem{Brannen} C.A. Brannen, The Lepton Masses, http://brannenworks.com/MASSES2.pdf, (2006).
+
 \bibitem{Polchinski} Polchinski J. ``String Theory'', vol. 1, p. 22 (Cambridge
 University Press, 1998).
 
