--- a/main.tex
+++ b/main.tex
@@ -1386,6 +1386,10 @@ connection''. Astrophys. Space Sci. 285(2):429 (2006).
 Pioneer anomaly''. Pi Class. Quant. Grav. 22, 5345-5354 (2005);
 arXiv:ge-qc/0507052.
 
+\bibitem{Sanchez4}Sanchez F. M. (1995), Holic Principle, ANPA Proc. (Cambridge) 16, 324-337
+
+\bibitem{Grosmann} Grosmann, Michel and Meyrueis, Patrick. ``Optics and Photonics Applied to Communication and Processing''. 01.1979
+
 \bibitem{Borcherds} Borcherds and Richard. ``Monstruous Moonshine and Monstruous Lie
 Superalgebras''. Invent. Math. 109, 405--444 (1992).
 
