--- a/main.tex
+++ b/main.tex
@@ -1386,9 +1386,9 @@ connection''. Astrophys. Space Sci. 285(2):429 (2006).
 Pioneer anomaly''. Pi Class. Quant. Grav. 22, 5345-5354 (2005);
 arXiv:ge-qc/0507052.
 
-\bibitem{Sanchez4}Sanchez F. M. (1995), Holic Principle, ANPA Proc. (Cambridge) 16, 324-337
+\bibitem{Sanchez4} Sanchez Francis M. (Sept 1995), Entelechies, Proceedings of the 16th Annual International meeting of ANPA held at the Univeristy of Cambridge, K.G. Bowden Editor, Holic Principle: The coherence of the Universe, 324--344
 
-\bibitem{Grosmann} Grosmann, Michel and Meyrueis, Patrick. ``Optics and Photonics Applied to Communication and Processing''. 01.1979
+\bibitem{Grosmann} Grosmann, Michel and Meyrueis, Patrick. ``Optics and Photonics Applied to Communication and Processing''. SPIE.  Jan 1979
 
 \bibitem{Borcherds} Borcherds and Richard. ``Monstruous Moonshine and Monstruous Lie
 Superalgebras''. Invent. Math. 109, 405--444 (1992).
@@ -1414,10 +1414,14 @@ Forum conference (2018); www.heidelberg-laureate-forum.org/blog/video/lecture-mo
 \bibitem{Conway} Conway J.H. and Norton S.P. ``Monstrous Moonshine''. Bull. London
 Math. Soc. 11(3) 308--339 (1979)
 
+\bibitem{Janko} Janko Zvonimir, ``Some new simple groups of finite order``. I, Symposia Mathematica (INDAM, Rome, 1967/68) Academic Press, London, 1969, pp. 25–64. MR 0244371
+
+\bibitem{Janko1} Janko Zvonimir, « A new finite simple group with abelian Sylow subgroups and its characterization », Journal of Algebra, vol. 32, 1966, p. 147-186
+
 \bibitem{Koide} Koide Y. ``Fermion-Boson two-body model of quarks and leptons and
 Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
 
-\bibitem{Brannen} C.A. Brannen, The Lepton Masses, http://brannenworks.com/MASSES2.pdf, (2006).
+\bibitem{Brannen} Brannen C.A. ``The Lepton Masses``, http://brannenworks.com/MASSES2.pdf, (2006).
 
 \bibitem{Polchinski} Polchinski J. ``String Theory'', vol. 1, p. 22 (Cambridge
 University Press, 1998).
@@ -1445,13 +1449,7 @@ d'espace d'une wustite de tri-incommensurabilite cubique est sur les groupes de
 Bravais de sa famlille cristalline dans l'espace euclidien a six dimensions''.
 Compt. Rend. Acad. Sci. Paris 305, Ser. II, 349--352 (1987).
 
-\bibitem{Atiyah2} Atiyah M. Private communication (December 2018). 
-
-\bibitem{Brannen} C.A. Brannen, The Lepton Masses, http://brannenworks.com/MASSES2.pdf, (2006).
-
-\bibitem{Grosmann} Grosmann, Michel and Meyrueis, Patrick. ``Optics and Photonics Applied to Communication and Processing''. 01.1979
-
-\bibitem{Sanchez4}Sanchez F M (1995), Holic Principle, ANPA Proc. (Cambridge) 16, 324
+\bibitem{Atiyah2} Atiyah Michael, ``Private communication`` (December 2018). 
 
 \end{thebibliography}
 \vspace*{-6pt}
