--- a/main.tex
+++ b/main.tex
@@ -60,8 +60,8 @@ $^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, Franc
 \hfill To the memory of Sir Michael Atiyah\\
 The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle and interpretating the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor of $10^{61}$, resolving at last the vacuum energy dilemma. 
 The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 together with  the Atiyah's constant, showing Four Force Unification.
-The Particle Physics must unlock by according Eddington's, Wyler's, Atiyah's and Sernheiemer's approches to Holic Principle, 
-with emphasis on the $10^{61}$ Trans-Plankian Quantized time, the Kotov's period, the Tifft's speed, the Koide-Sanchez constant, the Brannen matrix, the massive gluons and composite d quark. Cosmology must deblock by the oberving mature galaxies instead of that 'dark space' predicted by using the imperfect cosmological principle.  
+The Particle Physics must unlock by according Eddington's, Wyler's, Atiyah's and Sternheimer's approaches to Holic Principle, 
+with emphasis on the $10^{61}$ Trans-Plankian Quantized time, the Kotov's period, the Tifft's speed, the Koide-Sanchez constant, the Brannen matrix, the massive gluons and composite d quark. Cosmology must unblock by the oberving mature galaxies instead of that 'dark space' predicted by using the imperfect cosmological principle.  
 
 %Mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded %o%%n the imperfect cosmological principle.
 
@@ -290,7 +290,7 @@ of galaxy groups, with time constant $R/c$ being compensated by the appearance o
 neutrons at rate $c^{3} /Gm_{n}$, corresponding to about one neutron by century in a cathedral volume. The invariant visible Universe radius $R$ is then defined by the
 Schwarszchild relation, so that each point is the center of an equivalent $R$-radius black hole, of
 critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$, the above `Topon`. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
-Principle, untill now devoted to 3D application only \cite{Bousso}:
+Principle, until now devoted to 3D application only \cite{Bousso}:
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
 \end{equation}
@@ -778,7 +778,7 @@ Since Riemann series are tied to the prime number distribution, it seemss odd an
 have not point out the primes appearing in the harmonic series, since it is the single pole. It seems
 that the basic precept `all occurs in the pole` was forgotten in this case. 
 
-As ancient Egyptian used only fractions of type $1/n$, they were certainly aware of this particular harmonic series: 
+As ancient Egyptians used only fractions of type $1/n$, they were certainly aware of this particular harmonic series: 
 $S_{5} = 137/60$
 Indeed it appears in the Ptolemaic approximation for $\pi$: $\pi_{Pt} = 377/120 = 2 +  S_{5}/2$.
 
@@ -1290,7 +1290,7 @@ cosmology is the basis of United Science.
 they are optimal basis of computation tied with the Holographic Principle and its arithmetic form,
 the Holic Principle, which explains why normal space has 3 dimensions.
 \item 5/ The necessity of the Cosmos vasteness, resulting from holographic scanning and the rationalisation of $e$ and $\pi$
-\item 6/ The acceleration of expansion, which was predicted by the Eddington's \textit{invariant} cosmological constan $1/R^2$, is tied to a repulsive force proportional to distance, leading to \textit{exponential} recession. there is no need of the so-called 'dark energy'.
+\item 6/ The acceleration of expansion, which was predicted by the Eddington's \textit{invariant} cosmological constant $1/R^2$, is tied to a repulsive force proportional to distance, leading to \textit{exponential} recession. there is no need of the so-called 'dark energy'.
 \item 7/ The very existence of dark matter is proven, from the number of neutrons in the trivial fraction 3/10 of the visible Universe critical mass, which identifies with the very symmetric Eddington's number $136 \times 2^{256}$. The nature of dark matter would be simply an anti-phase matter-antimatter oscillation \cite{Sanchez1}.  
 \item 8/ The introduction of the Topon in the Holographic Principle justifies at last the $10^{122}$ gap between vacuum energy and that of the visible Universe.
 \item 9/ The grandcosmos is huge but not infinite, in conformity with the Cosmological Computational Principle.
