--- a/main.tex
+++ b/main.tex
@@ -61,7 +61,7 @@ $^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, Franc
 The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle and interpretating the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor of $10^{61}$, resolving at last the vacuum energy dilemma. 
 The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 together with  the Atiyah's constant, showing Four Force Unification.
 The Particle Physics must unlock by according Eddington's, Wyler's, Atiyah's and Sternheimer's approaches to Holic Principle, 
-with emphasis on the $10^{61}$ Trans-Plankian Quantized time, the Kotov's period, the Tifft's speed, the Koide-Sanchez constant, the Brannen matrix, the massive gluons and composite d quark. Cosmology must unblock by the oberving mature galaxies instead of that 'dark space' predicted by using the imperfect cosmological principle.  
+with emphasis on the $10^{61}$ Trans-Plankian Quantized time, the Kotov's period, the Tifft's speed, the Koide-Sanchez constant, the Brannen matrix, the massive gluons and composite d quark. Cosmology must unblock by oberving mature galaxies instead of that 'dark space' predicted by using the imperfect cosmological principle.  
 
 %Mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded %o%%n the imperfect cosmological principle.
 
@@ -1140,9 +1140,9 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^2 \approx d_e^2 ln s/ln\tau
 \end{equation}
 where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brout-Englert-Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
-From the observation (0.04 \% and 3\%):
+with \delta^{\prime} = p_K^2/a^3}$ (-11, 11 ppm and 0.04 \%):
 \begin{equation}
-\tau^{137} \approx \mu^{210} /4\pi \approx O_M^9
+(R_GC/l_P)^4/(2\pi)^2 \sqrt\pi \approx \mu^{210} \approx (O_M \delta^{\prime})^9 \approx tau^{137}
 \end{equation}
 the Extended Holic Principle (section 6) cannot be denied. Moreover, with $\pi_0 = (7(35^2-1)-(2^7-1)/3 \times 7 \times 2^7)$, where the Combinatorial Hierarchy terms appear, the deviation reduces to 112 ppb; \textit{the intervention of $\pi$ - rationalisation cannot be denied}.
 
