--- a/main.tex
+++ b/main.tex
@@ -1140,11 +1140,12 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^2 \approx d_e^2 ln s/ln\tau
 \end{equation}
 where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brout-Englert-Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
-with $\delta^{\prime} = p_K^2/a^3}$ (-11, 11 ppm and 0.04 \%):
+
+With $\delta^{\prime} = p_K^2/a^3}$ (-11, 11 ppm and 0.04 \%):
 \begin{equation}
 (R_GC/l_P)^4/(2\pi)^2 \sqrt\pi \approx \mu^{210} \approx (O_M \delta^{\prime})^9 \approx tau^{137}
 \end{equation}
-the Extended Holic Principle (section 6) cannot be denied. Moreover, with $\pi_0 = (7(35^2-1)-(2^7-1)/3 \times 7 \times 2^7)$, where the Combinatorial Hierarchy terms appear, the deviation reduces to 112 ppb; \textit{the intervention of $\pi$ - rationalisation cannot be denied}.
+the Extended Holic Principle (section 6) cannot be denied. 
 
 
 \section {Discussion}
