--- a/main.tex
+++ b/main.tex
@@ -1145,7 +1145,7 @@ With $\delta^{\prime} = p_K^2/a^3 $ (-11, 11 ppm and 0.04 \%):
 \begin{equation}
 (R_GC/l_P)^4/(2\pi)^2 \sqrt{\pi} \approx \mu^{210} \approx (O_M \delta^{\prime})^9 \approx tau^{137}
 \end{equation}
-the Extended Holic Principle (section 6) cannot be denied. 
+the Extended Holic Principle (section 6) cannot be denied. The interpretation is clear: the 4D space-time in Grandcosmos is associated with a 9D space involving the Monster. \textit{This opens a path towards the Final theory}. 
 
 
 \section {Discussion}
