--- a/main.tex
+++ b/main.tex
@@ -1141,9 +1141,9 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 \end{equation}
 where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brout-Englert-Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
 
-With $\delta^{\prime} = p_K^2/a^3 $ (-11, 11 ppm, and 0.04 \%):
+With $\delta^{\prime} = p_K^2/a^3 $, and the symmetrised Planck area $l_P^{\prime}^2 = h\hbarG/c^3 (-11, 11 ppm, and 0.04 \%):
 \begin{equation}
-(R_GC/l_P)^4/(2\pi)^2 \sqrt{\pi} \approx \mu^{210} \approx (O_M \delta^{\prime})^9 \approx \tau^{137}
+(R_{GC}/l_P^{\prime})^4/\sqrt{\pi} \approx \mu^{210} \approx (O_M \delta^{\prime})^9 \approx \tau^{137}
 \end{equation}
 The existence of a Final Theory based on the Holic Principle (section 6) cannot be denied. The interpretation is clear: the 4D space-time in Grandcosmos is associated with a 9D space involving the Monster. \textit{This opens a path towards the Final Theory}. 
 
