--- a/main.tex
+++ b/main.tex
@@ -1142,9 +1142,9 @@ where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brou
 
 With $\delta^{\prime} = p_K^2/a^3 $, and the symmetrised Planck area $(l_P^{\prime})^2 = \sqrt{h \hbar} G/c^3$ (11, -11 ppm, and 0.04 \%):
 \begin{equation}
-(R_{GC}/l_P^{\prime})^4/\sqrt{\pi} \approx (\delta^{\prime} O_M )^9 \approx \mu^{210}   \approx \tau^{137}
+\pi^[-1/2}(R_{GC}/l_P^{\prime})^4/ \approx (\delta^{\prime} O_M )^9 \approx (4\pi)^{1/2}  \mu^{210} \approx \tau^{137}
 \end{equation}
-The existence of a Final Theory based on the Holic Principle (section 6) and the Koide-Sanchez constant cannot be denied. The interpretation is clear: the 4D space-time in Grandcosmos is associated with a 9D space involving the Monster. \textit{This opens a path towards the Final Theory}. 
+The existence of a Final Theory based on the Holic Principle (section 6), the Grandcosmos and the Koide-Sanchez constant cannot be denied. The interpretation is clear: the 4D space-time in Grandcosmos is associated with a 9D space involving the Monster. \textit{This opens a path towards the Final Theory}. 
 
 
 \section {Discussion}
