--- a/main.tex
+++ b/main.tex
@@ -148,28 +148,28 @@ So Eddington considered rightly the Cosmic Large Number correlations, as recalle
 
 The present article shows that \textit{Physics is an unique part of Mathematics, which are presently uncomplete}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study confirms the super-string theory but with complete rehabilitation of the \textit{tachyonic} bosonic string theory.
 
-\textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why one asks questions ? We propose that the parameters are optimal basis in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics and three-point temperatures of mammals and main molecules \cite{Sanchez1}.
+\textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why one asks questions ? We propose that the parameters are optimal base in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics and triple-point temperatures of mammals and main molecules \cite{Sanchez1}.
 
-\textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the Copenhagen statistical interpretation of quantum mechanics.
+\textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the standard Copenhagen statistical interpretation of quantum mechanics.
 
-The fact that three parameters, among of about 30, are so clearly emerging means that physics, and more generally science, follows a hierarchical order: \textit{one can progress without knowing the details of the underlying fundamental theory.}
+The fact that three parameters, amongst 30, are so clearly emerging means that physics, and more generally science, follows a hierarchical order: \textit{one can progress without knowing the details of the underlying fundamental theory.}
 
 So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. 
 
-In the same manner, this article prefigures \textit{the fundamental theory, but precizing its arithmetical foundation: the Holic Principle}, recalled in section 6. Thus, there must exist multi-base algorithms able to explain the compatibiloity between these two principles, which seems at first sight contradictory. 
+In the same manner, this article prefigures \textit{the fundamental theory, but precizing its arithmetical foundation: the Holic Principle}, recalled in section 6. Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, which seems at first sight contradictory. 
 
 
 \begin{figure*}
 \centering
 \includegraphics[width=\textwidth,height=14cm]{./figures/figure}
-\caption{The Topological Axis. Double logarithm (y = lnln(Y)) of main dimensionless physical quantities 
-Y corresponds to the String dimension series n = 4k + 2, from k = 0 to k = 7, showing the Cartan-Bott
+\caption{The Topological Axis. Double natural logarithms (y = lnln(Y)) of main dimensionless physical quantities 
+(Y) corresponds to the String dimension series n = 4k + 2, from k = 0 to k = 7, showing the Bott
 periodicity 8 [19] which is at the origin of the name `Topological Axis`. 
 \textit{With unit the Electron Compton wavelength, in the macro-physics side}, the Universe circumference 
-    is tied to bosonic critical dimension 26, while Cartan-Bott reduction leads to n = 18 (thermal photon, 
-    tied to the the mammal wavelength throught the Sternheimer scale factor j), n = 10, (superstring 
+    is tied to the bosonic critical dimension 26, while Bott reduction leads to n = 18 (thermal photon, 
+    tied to the the mammal wavelength through the Sternheimer scale factor j), n = 10, (superstring 
     dimension, Hydrogen atom), and n = 2 (string). For the number 24 of transverse dimensions, it is
-    the Kotov length, through a factor 2$\pi$a, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant, it is the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k \approx e^{2}$, $y\approx 2e$, it is 
+    the Kotov length, through a factor 2$\pi$a, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant, it means the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k \approx e^{2}$, $y\approx 2e$, it is 
     the Grandcosmos radius.
    \textit{With the same unit, the Electron Compton wavelength, in the micro-physics side}, the Space-Time-Matter
     Holic dimension n = 30 is tied to $c$ times the cosmic Supercycle period, while Cartan-Bott reduction lead to the gauge bosons:
@@ -177,7 +177,7 @@ periodicity 8 [19] which is at the origin of the name `Topological Axis`.
     For the superstring n = 10, it is the Pion. For $k \approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ 
     the square of the Green-Schwarz string dimension and the tenth root of the Monster cardinal, it is
     the Brout-Englert-Higgs boson (125 GeV). For k $\approx 2e^e$, it is the Topon, the visible Universe wavelength,
-    which identifies with the monoradial unit length of the Bekenstein-Hawking Univers entropy.
+    which identifies with the monoradial unit length of the Bekenstein-Hawking Universe entropy.
    \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while  n $\approx \Gamma$, 
     to the graviton mass.
     \textit{With unit the Kotov length}, the Holic dimension n = 30 corresponds to the Monster cardinal, 
@@ -191,10 +191,10 @@ periodicity 8 [19] which is at the origin of the name `Topological Axis`.
 We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, astrophysics, particle   physics, theoretical physics and mathematics.
 The most famous fine tuning implies cosmic quantities, awkwardly called the `Double
 Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
-clue in steady-state cosmology based on the \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity).
-This Cosmic Fine-Tuning leads directly to a \textit{Gravitational Hydrogen model of the visible universe} \cite{Sanchez1}
-defining the Universe horizon radius: $R = 2a_{G} \lambdabar_{e}$ the factor 2 coming from the two atoms in
-Hydrogen molecule, where 
+clue in the steady-state cosmology based on the \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity).
+This Cosmological Fine-Tuning leads directly to a \textit{Gravitational Hydrogen molecule model of the visible universe} \cite{Sanchez1}.
+Defining the Universe horizon radius with $R = 2a_{G} \lambdabar_{e}$ the factor 2 expresses its bi-atomic
+Hydrogen molecule characteristics, where 
 $\lambdabar_{e} = \hbar/cm_{e}$
 is the Electron Compton reduced wavelength, and the
 gravitational coupling constant is: 
@@ -202,10 +202,10 @@ $a_{G} = \hbar c/Gm_{p}m_{H}$
 where $m_p$ and $m_H$ are the proton and hydrogen atom masses.
 So, \textit{the speed $c$ is eliminated}, in accordance with
 Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
-most recent measurement \cite{Bonvin}: 72(3) (km/s)/Megaparsec, which confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by $9\%$, value.
+most recent measurements \cite{Bonvin}: 72(3) (km/s)/Megaparsec. The latter confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower value, by $9\%$.
 
 Consider the wavelength of the visible Universe with critical mass $M= Rc^2/2G$: $$\lambdabar_{M} = \hbar /Mc \approx 4 \times 10^{-96} m$$ This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
-and results from the imbrication of relations of the form 
+and stems from the imbrication of relations of the form 
 $
 \lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_{e})^{2}
 $
@@ -222,9 +222,9 @@ $$
 \sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}\\ % 3rd row
 \end{array}
 $$
-which includes the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Thus, the correlation is eightfold,
-including, apart the two ones above, three relations which have been independently reported \cite{Sanchez1}.
-The overall large number $2^{256}$ has an evident computational character, confirmed below by the
+These series include the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Hence, the correlation is eightfold,
+including, apart from the two above relationships, three relations that have been independently reported \cite{Sanchez1}.
+The overall large number $2^{256}$ has an obvious computational characteristic, confirmed below by the
 dramatic appearance of the Eddington Large Number.
 
 In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation which is incompatible with the standard evolutionary cosmology. By this order of magnitude, we infer rather precise relations. With the Hydrogen radius $r_H$, we infer 
